@@ -2777,3 +2777,5 @@
 20080706 menu.[ch],menu_data.dat,tape.[ch]: add some detail text for the tape
          branch for the Widget UI ala FuseX (thanks, crabfists) (Fred).
 20080715 PORTING: add document on what you can and cannot do with Fuse's code.
+20080717 ui/win32/debugger.c: Win32: accommodation for the new event
+	 architecture (Marek).
